# Free_credit

./: .env.example  .gitignore  PLAN.md  pyproject.toml
.github/workflows/: scrape.yml
src/: dedup.py  main.py  models.py  notifier.py  scorer.py
src/scrapers/: base.py  devpost.py  eventbrite.py  google_search.py  luma.py  mlh.py  reddit.py  twitter.py
tests/: test_dedup.py  test_devpost.py  test_eventbrite.py  test_google.py  test_luma.py  test_main.py  test_mlh.py  test_notifier.py  test_reddit.py  test_scorer.py  test_twitter.py
tests/fixtures/: devpost_detail.html  devpost_response.json  eventbrite_search.html  google_empty.html  google_search.html  luma_discovery.html  luma_response.json  mlh_events.html  nitter_search.html  reddit_response.json  reddit_rss.xml
