[project]
name = "free-credit-scraper"
version = "0.1.0"
description = "Discovers hackathons and events offering free cloud/LLM credits"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "selectolax>=0.4",
    "discord-webhook>=1.4",
    "tenacity>=8.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.50"]
llm = ["httpx>=0.28"]  # OpenRouter uses HTTP API
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",  # httpx mocking
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
